preventing overflow on the text for mobile

--- a/css/badge.css
+++ b/css/badge.css
@@ -74,7 +74,7 @@
 /*When User Scans*/
 
 .congratsText h2 {
-  font-size: 3rem;
+  font-size: 1.5rem;
 }
 
 .congratsText {
